--- a/src/components/button/style-button.css
+++ b/src/components/button/style-button.css
@@ -29,7 +29,7 @@
     &-error {
     }
     &-twitch {
-        @apply bg-brand-twitch;
+        @apply bg-brand-twitch hover:bg-brand-twitch/80 active:bg-brand-twitch/50;
     }
 }
 
@@ -40,7 +40,7 @@
     &-error {
     }
     &-twitch {
-        @apply text-brand-twitch border-brand-twitch;
+        @apply border-brand-twitch text-brand-twitch;
     }
 }
 
