--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import "./button/style-button.css";
+@import "./tooltip/style-tooltip.css";
 /* @import "./icon-button/style-icon-button.css"; */
 
 @tailwind base;
