update: Update screen for failed fetch

--- a/styles/tooltip/style-tooltip.css
+++ b/styles/tooltip/style-tooltip.css
@@ -3,7 +3,7 @@
 }
 
 .tooltip-wrapper {
-    @apply absolute flex w-full justify-center;
+    @apply absolute left-1/2 flex w-full justify-center;
 }
 
 .tooltip-wrapper {
