--- a/styles/modal/style-modal.css
+++ b/styles/modal/style-modal.css
@@ -1,5 +1,5 @@
 .modal {
-    @apply absolute z-10 h-full w-full;
+    @apply absolute top-0 z-10 h-full w-full;
 }
 
 .modal-backdrop {
@@ -12,7 +12,7 @@
 
 .modal-container {
     .inner {
-        @apply pointer-events-auto flex w-fit min-w-[256px] max-w-4xl flex-col rounded-2xl bg-secondary py-4;
+        @apply pointer-events-auto flex w-full min-w-[256px] max-w-4xl flex-col rounded-2xl bg-secondary py-4;
     }
 
     .inner {
